# Nova_Backend_Rust

./: .env  Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs  params_structs.rs  routes.rs
db/src/: lib.rs
field-blockchain-data/: Cargo.toml
field-blockchain-data/src/: data_structions.rs  lib.rs
get_nft_data_to_db/: Cargo.toml  docker-compose.yml
get_nft_data_to_db/src/: lib.rs  main.rs
get_nft_data_to_db/src/get_data/: get_new_blcok_data.rs  mod.rs
get_nft_data_to_db/src/pgsql/: mod.rs  operates.rs  tables.rs
nova-client/: Cargo.toml
nova-client/src/: lib.rs
nova-client/src/nft_apis/: response_structs.rs  user.rs
searcher-client/: Cargo.toml
searcher-client/src/: lib.rs  main.rs
sei-client/: Cargo.toml
sei-client/src/: lib.rs
sei-client/src/apis/: _apis.rs
sei-client/src/field_data/: field_data_structions.rs
