[package]
name = "get_nft_data_to_db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = "0.7.10"
tokio-tungstenite = "0.23.1"
futures-util = "0.3"

reqwest = { version = "0.12.4", features = ["json","cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json={version = "1.0.0"}
futures = "0.3"
# url = "2.5.0"
dotenv = "0.15"

field-blockchain-data={path="../field-blockchain-data"}