[package]
name = "sei-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json","cookies"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json={version = "1.0.0"}
futures = "0.3"
url = "2.5.0"
